# SQLQueryExplanationOptimizationEngine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  API_ENDPOINT_VALIDATION.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  PROJECT_SUMMARY_V1.0.0.md  QUICKSTART.md  README.md  REPOSITORY_CLEANUP.md  START_HERE.md  docker-compose.yml  pyproject.toml  qeo.py  requirements.txt  simple_server.py  start-server.ps1
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-docker.yml  release-pypi.yml
bench/report/: report.csv  report.json
docs/: ARCHITECTURE.md  BENCHMARKING.md  DEPLOYMENT.md  ERRORS_AND_MESSAGES.md  README.md  TUTORIAL.md  api-reference.md  errors-and-messages.md  getting-started.md
docs/archive/: README.md  SYSTEM_DESIGN.md
docs/archive/numbered-design-docs/: 01-architecture-and-stack.md  02-functionality-and-apis.md  03-configuration-and-operations.md  04-technical-reference.md
docs_archive/: CLEAN_START.bat  FINAL_SOLUTION.txt  FORCE_KILL_PORT_8000.ps1  HOW_TO_RUN.txt  INSTRUCTIONS.txt  KILL_OLD_SERVER.bat  RUN_ME.bat  START_HERE.md  START_ON_PORT_9000.bat  START_PORT_8001.bat  USER_GUIDE.md
infra/init/: 20-seed.sql
infra/seed/: seed_orders.sql
scripts/: deploy.sh  lint-fix.ps1  lint-fix.sh  start.sh
scripts/bench/: run_bench.py
scripts/local/: demo.sh  start.bat
scripts/utils/: verify.py
src/app/: __init__.py  cli.py  main.py
src/app/core/: __init__.py  auth.py  cache.py  cache_analytics.py  cache_invalidator.py  cache_manager.py  cache_simulator.py  config.py  db.py  index_manager.py  llm_adapter.py  metrics.py  observability.py  optimizer.py  performance.py  plan_diff.py  plan_heuristics.py  prefetch_engine.py  production.py  profiler.py  profiler_tasks.py  prompts.py  prompts_backup.py  query_corrector.py  query_history.py  resilience.py  security.py  self_healing.py  sql_analyzer.py  stats_collector.py  validation.py  whatif.py  workload.py
src/app/providers/: provider_dummy.py  provider_ollama.py  provider_ollama_fixed.py
src/app/routers/: cache.py  lint.py  (+10 more)
tests/: conftest.py  test_advisor_filtering_and_scoring.py  test_auth.py  test_cache_system.py  test_catalog_integration.py  test_determinism.py  test_explain_endpoint.py  test_explain_integration.py  test_explain_nl_dummy.py  test_index_management.py  test_lint_endpoint.py  test_optimize_whatif_integration.py  test_optimizer_rules.py  test_optimizer_unit.py  test_profiler_integration.py  test_rewrite_rules.py  test_schema_endpoint.py  test_smoke.py  test_sql_analyzer_parse.py  test_sql_analyzer_rules.py  test_structure.py
tests/bench/: test_bench_report.py
tests/integration/: __init__.py  test_api_auth.py  test_production.py  test_production_day_simulation.py  test_rate_limit.py
tests/load/: README.md  chaos-experiments.yaml  chaos_test.py  cost_validation_test.py  edge_cache_test.js  gradual_ramp_test.py  k6-load-test.js  k6_global_load_test.js  locustfile.py  regression_detector.py
tests/smoke/: staging_smoke_test.sh
tests/validation/: validate_ai_operations.py  validate_all_regions.py  validate_edge_workers.py  validate_failover.py  validate_slo_tracking.py
(+16 files in other folders)
