[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project]
name = "queryexpnopt"
description = "SQL Query Explanation & Optimization Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maintainers", email = "maintainers@example.com" }]
version = "1.0.0"
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "sqlglot>=19.0.0",
  "pydantic>=2.5.0",
  "prometheus-client>=0.17.0",
  "slowapi>=0.1.9",
]

[project.scripts]
qeo = "app.cli:main"

[project.urls]
Homepage = "https://github.com/ORG/REPO"
Repository = "https://github.com/ORG/REPO"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "black>=23.10",
  "ruff>=0.1.7",
  "httpx>=0.24.0",
  "aiohttp>=3.8.0",
]